Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 4.1.0
-
ghx-label-10
Description
TestInsertWideTable.test_insert_wide_table failed in exhaustive tests.
Error Message
query_test/test_insert.py:259: in test_insert_wide_table self.client.execute(insert_stmt) common/impala_connection.py:208: in execute return self._beeswax_client.execute(sql_stmt, user=user) beeswax/impala_beeswax.py:189: in execute handle = self._execute_query(query_string.strip(), user=user) beeswax/impala_beeswax.py:367: in __execute_query self.wait_for_finished(handle) beeswax/impala_beeswax.py:388: in wait_for_finished raise ImpalaBeeswaxException("Query aborted:" + error_log, None) E ImpalaBeeswaxException: ImpalaBeeswaxException: E Query aborted:Parquet file size 268435456 bytes is too small for a table with 2000 non-partitioning columns. Set query option PARQUET_FILE_SIZE to at least 393216000.
Stacktrace
query_test/test_insert.py:259: in test_insert_wide_table
self.client.execute(insert_stmt)
common/impala_connection.py:208: in execute
return self.__beeswax_client.execute(sql_stmt, user=user)
beeswax/impala_beeswax.py:189: in execute
handle = self.__execute_query(query_string.strip(), user=user)
beeswax/impala_beeswax.py:367: in __execute_query
self.wait_for_finished(handle)
beeswax/impala_beeswax.py:388: in wait_for_finished
raise ImpalaBeeswaxException("Query aborted:" + error_log, None)
E ImpalaBeeswaxException: ImpalaBeeswaxException:
E Query aborted:Parquet file size 268435456 bytes is too small for a table with 2000 non-partitioning columns. Set query option PARQUET_FILE_SIZE to at least 393216000.
Attachments
Attachments
Issue Links
- is broken by
-
IMPALA-10627 Use standard Iceberg table properties
- Resolved