IMPALA-10820: Fix calculating default block size for parquest files

This patch fixes a bug introduced in IMPALA-10627. Because of the bug
the wrong default block size was used for parquet files which broke
TestInsertWideTable.test_insert_wide_table e2e test.

Testing:
- Run test_insert_wide_table with exhaustive strategy.

Change-Id: Iac8c6dd80dfe84cb7b3d2106713eae87ce923934
Reviewed-on: http://gerrit.cloudera.org:8080/17719
Reviewed-by: Zoltan Borok-Nagy <boroknagyz@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>